<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_overview"
        android:icon="@drawable/transaction"
        android:title="@string/transaction" />

    <item
        android:id="@+id/nav_wallet"
        android:icon="@drawable/wallet"
        android:title="@string/wallet" />

    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/transparent_placeholder"
        android:title=""
        android:enabled="false" />

    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/stats"
        android:title="@string/statistical" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/setting"
        android:title="@string/setting" />

</menu>